# super-pocket

./: .gitignore  .readthedocs.yaml  CLEANUP_SUMMARY.md  README.md  fancy_md.py  links  markd.py  pyproject.toml  requirements.txt  super-pocket.rb
Agents/: agent_templates.md  markdown_tools.md  project_tools.md  tests.md
Cheat Sheets/: SQL.md
Clinkey/: __init__.py  clinkey.py  clinkey_view.py  heat.py  main.py  pyproject.toml  words_lines
conv_to_pdf/: conv_to_pdf.py
docs/: Makefile  api.rst  changelog.rst  commands.rst  conf.py  contributing.rst  documentation.rst  index.rst  installation.rst  license.rst  modules.rst  quickstart.rst  readme-generator.md  requirements.txt  templates.rst  testing.rst
docs/_static/: custom.css
docs/plans/: 2025-11-16-readme-generator-design.md  2025-11-16-readme-generator.md  2025-11-25-project-init-design.md  2025-11-25-project-init-implementation.md
flavicon/: flavicon.py
pocket/: __init__.py  cli.py
pocket/web/: job_search.py
src/super_pocket/: __init__.py  cli.py  interactive.py  settings.py  utils.py
src/super_pocket/documents/templates/: agent_maker.md  agents_template_maker.md  job_assistant_agent.md
src/super_pocket/iconify/: __init__.py  cli.py  service.py
src/super_pocket/project/: req_to_date.py
src/super_pocket/project/templates/: ml-project.yaml  python-cli.yaml  python-package.yaml
src/super_pocket/project/templates/automation-script/: config.toml.j2  config.yaml.j2  env.j2  gitignore.j2  logging_config.py.j2  requirements.txt.j2  runner.py.j2
src/super_pocket/project/templates/docs-site/: README.md.j2  api_sphinx.rst.j2  changelog_docusaurus.md.j2  changelog_sphinx.rst.j2  conf_sphinx.py.j2  contributing_docusaurus.md.j2  getting-started_docusaurus.md.j2  getting-started_sphinx.rst.j2  github_pages.yml.j2  index_docusaurus.md.j2  index_mkdocs.md.j2  installation_mkdocs.md.j2  installation_sphinx.rst.j2  pyproject_uv.toml.j2  requirements_sphinx.txt.j2  sidebars.js.j2  usage_mkdocs.md.j2
src/super_pocket/project/templates/fastapi-api/: Dockerfile.j2  README.md.j2  alembic_env.py.j2  env.example.j2  models.py.j2  pyproject_pip.toml.j2  pyproject_poetry.toml.j2  requirements.txt.j2  router_example.py.j2  (+2 more)
src/super_pocket/templates_and_cheatsheets/cheatsheets/: django_class_based_views_cheatsheet.md  git.md
src/super_pocket/templates_and_cheatsheets/templates/: template_pyproject.toml  unit_tests_agent.md
src/super_pocket/web/: favicon.py
src/super_pocket/xml/: cli.py
src/tests/: README_TESTS.md  conftest.py
src/tests/unit_tests/: test_interactive_mode.py
src/tests/unit_tests/test_iconify/: __init__.py  test_cli.py  test_service.py
src/tests/unit_tests/test_project/: test_req_to_date_parsing.py
super_pocket/: cli.py  interactive.py
super_pocket/markdown/: renderer.py
super_pocket/project/: readme.py  req_to_date.py  to_file.py
super_pocket/project/init/: __init__.py  actions.py  cli.py  engine.py  interactive.py  manifest.py  renderers.py
super_pocket/project/templates/: automation-script.yaml  docs-site.yaml  fastapi-api.yaml  python-cli.yaml
super_pocket/project/templates/automation-script/: Dockerfile.j2  README.md.j2  config.json.j2  config_loader.py.j2  notifications.py.j2  pyproject_pip.toml.j2  pyproject_poetry.toml.j2  pyproject_uv.toml.j2  systemd_service.j2  tasks.py.j2  test_tasks.py.j2
super_pocket/project/templates/docs-site/: api_mkdocs.md.j2  changelog_mkdocs.md.j2  contributing_mkdocs.md.j2  contributing_sphinx.rst.j2  docusaurus.config.js.j2  getting-started_mkdocs.md.j2  gitignore.j2  index_sphinx.rst.j2  installation_docusaurus.md.j2  mkdocs.yml.j2  package.json.j2  pyproject_poetry.toml.j2  readthedocs.yml.j2  requirements_mkdocs.txt.j2  usage_docusaurus.md.j2  usage_sphinx.rst.j2
super_pocket/project/templates/fastapi-api/: alembic.ini.j2  auth.py.j2  conftest.py.j2  database.py.j2  docker-compose.yml.j2  github_workflow.yml.j2  gitignore.j2  main.py.j2  pyproject_uv.toml.j2
super_pocket/project/templates/ml-project/: Dockerfile.j2  __init__.py.j2  config.py.j2  dvcignore.j2  pyproject_poetry.toml.j2  pyproject_uv.toml.j2  requirements_gpu.txt.j2  test_data.py.j2
super_pocket/project/templates/python-cli/: Dockerfile.j2  README.md.j2  cli_click.py  cli_click.py.j2  cli_typer.py.j2  pyproject_uv.toml.j2  requirements.txt.j2  test_cli.py.j2
super_pocket/project/templates/python-package/: CHANGELOG.md.j2  README.md.j2  gitignore.j2  pyproject_poetry.toml.j2  pyproject_uv.toml.j2
super_pocket/readme/: cli.py
super_pocket/readme/analyzers/: python.py
super_pocket/readme/templates/: __init__.py  base.py
super_pocket/templates_and_cheatsheets/cheatsheets/: javascript.md  python.md
super_pocket/web/: favicon.py
tests/: README_TESTS.md
tests/fixtures/sample_projects/python_cli/: pyproject.toml
tests/unit_tests/: __init__.py
tests/unit_tests/test_init/: test_manifest.py  test_renderers.py
tests/unit_tests/test_project/: test_req_to_date_cli.py
tests/unit_tests/test_readme/: test_cli.py
tests/unit_tests/test_readme/test_analyzers/: test_python.py
(+16 files in other folders)
