[project]
name = "super-pocket"
version = "1.0.1"
description = "A collection of developer tools including markdown rendering, project exporters, agent templates, and cheatsheets management."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Dimitri Gaggioli", email = "dimitri.gaggioli@gmail.com"}
]
keywords = ["developer-tools", "cli", "markdown", "productivity", "agents", "templates", "job", "assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
dependencies = [
    "click>=8.3.1",
    "coverage>=7.12.0",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    # Sphinx extensions
    "sphinx-autobuild>=2025.8.25",
    # Markdown support (optional)
    "myst-parser>=4.0.1",
    # Additional utilities
    "sphinx-tabs>=3.4.7",
    "sphinxcontrib-httpdomain>=1.8.1",
    # Code documentation
    "sphinx-autodoc-typehints>=3.5.2",
    "httpx>=0.28.1",
    "uvicorn>=0.38.0",
    "asyncio>=4.0.0",
    "fastapi>=0.121.2",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
]


[project.scripts]
pocket = "super_pocket.cli:cli"
markd = "super_pocket.markdown.renderer:markd"
proj2md = "super_pocket.project.to_file:proj_to_file"
req-to-date = "super_pocket.project.req_to_date:req_to_date_cli"
conv2pdf = "super_pocket.pdf.converter:main"
favicon = "super_pocket.web.favicon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=pocket --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["super_pocket/"]
omit = [
    "*/tests/*",
    "*/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py311"]
